--- a/source/less/button.less
+++ b/source/less/button.less
@@ -25,6 +25,15 @@
 }
 
 .button--gray {
-  background-color: gray;
+  background-color: #f2f2f2;
   color: #000000;
+}
+
+.button--gray:hover,
+.button--gray:focus {
+  background-color: #ebebeb;
+}
+
+.button--gray:active {
+  color: #b9b9b9;
 }
