--- a/source/less/description.less
+++ b/source/less/description.less
@@ -161,6 +161,7 @@
     padding: 16px 29px 16px 25px;
   }
   @media (min-width: @desktop-width) {
+    max-width: 245px;
     margin-top: 32px;
     margin-left: 80px;
   }
