--- a/source/less/form-programs.less
+++ b/source/less/form-programs.less
@@ -50,7 +50,7 @@
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  border: 1px solid red;
+  border: 1px solid #cecece;
   background-color: transparent;
 
   @media (min-width: @tablet-width) {
@@ -60,6 +60,15 @@
     left: -58px;
   }
 }
+
+.form-programs__label:hover::before,
+.form-programs__label:focus::before {
+  border-color: #bcbcbc;
+}
+.form-programs__label:active {
+  opacity: 0.5;
+}
+
 .form-programs__input:checked + label::after {
   content: "";
   position: absolute;
@@ -68,7 +77,7 @@
   width: 12px;
   height: 12px;
   border-radius: 50%;
-  background-color: blue;
+  background-color: @bg-green;
 
   @media (min-width: @tablet-width) {
     width: 18px;
