--- a/source/less/page-footer.less
+++ b/source/less/page-footer.less
@@ -160,6 +160,16 @@
   margin: 0 auto;
   outline: 1px solid red;
 }
+
+.page-footer__logo-image:hover {
+  opacity: 0.7;
+}
+
+.page-footer__logo-image:active,
+.page-footer__logo-image:focus {
+  opacity: 0.4;
+}
+
 .page-footer__copyright {
   position: relative;
   min-height: 77px;
@@ -200,7 +210,6 @@
   color: #444444;
   display: block;
   padding-top: 27px;
-  color: green;
 
   font-size: 16px;
   line-height: 16px;
@@ -211,4 +220,12 @@
     padding: 0;
     margin: 0;
   }
+}
+
+.page-footer__copyright-link:hover .page-footer__copyright::before {
+  fill: @bg-green;
+}
+.page-footer__copyright-link:active,
+.page-footer__copyright-link:focus {
+  opacity: 0.5;
 }
