--- a/source/less/product-show.less
+++ b/source/less/product-show.less
@@ -5,6 +5,7 @@
   box-sizing: border-box;
   position: relative;
 }
+
 @media (min-width: @tablet-width) {
   .product-show {
   width: 323px;
@@ -12,6 +13,7 @@
   outline: 1px solid black;
   }
 }
+
 @media (min-width: @desktop-width) {
   .product-show {
   width: 245px;
@@ -89,4 +91,9 @@
     margin-left: auto;
     margin-right: auto;
   }
+}
+
+.product__link {
+  width: 168px;
+  height: 41px;
 }
