--- a/source/less/page-footer.less
+++ b/source/less/page-footer.less
@@ -187,16 +187,12 @@
     margin-right: 61px;
   }
 }
-.page-footer__copyright::before {
-  content: "";
+.page-footer__copyright-icon {
   position: absolute;
   top: 9px;
   right: -18px;
   width: 60px;
   height: 60px;
-  background-image: url("../img/htmlacademy.svg");
-  background-repeat: no-repeat;
-  background-position: 0 0;
   transform: scale(0.7);
   outline: 1px solid green;
 
@@ -222,9 +218,10 @@
   }
 }
 
-.page-footer__copyright-link:hover .page-footer__copyright::before {
+.page-footer__copyright-link:hover .page-footer__copyright-icon {
   fill: @bg-green;
 }
+
 .page-footer__copyright-link:active,
 .page-footer__copyright-link:focus {
   opacity: 0.5;
