--- a/source/less/how-work.less
+++ b/source/less/how-work.less
@@ -98,7 +98,6 @@
   }
 }
 
-
 .how-work__describe--foliage::after {
   content: "";
   position: absolute;
@@ -215,7 +214,7 @@
     background-position: 0 0;
     background-repeat: no-repeat;
     outline: 1px solid red;
-    z-inndex: -10;
+    z-index: -10;
   }
   .how-work__describe--foliage::before {
     top: 0px;
