--- a/source/less/description.less
+++ b/source/less/description.less
@@ -60,7 +60,7 @@
   }
   @media (min-width: @desktop-width) {
     top: 18px;
-    left: 450px;
+    left: 490px;
     width: 552px;
     height: 499px;
     outline: 1px solid blue;
@@ -77,7 +77,7 @@
     position: absolute;
     content: "";
     top: -125px;
-    left: 609px;
+    left: 649px;
     width: 720px;
     height: 696px;
     outline: 1px solid black;
@@ -115,7 +115,7 @@
   }
   @media (min-width: @desktop-width) {
     margin-top: 98px;
-    margin-left: 81px;
+    margin-left: 121px;
     z-index: 10;
   }
 }
@@ -138,7 +138,7 @@
   }
   @media (min-width: @desktop-width) {
     margin-top: 39px;
-    margin-left: 79px;
+    margin-left: 119px;
     outline: 1px solid red;
     z-index: 10;
   }
@@ -147,23 +147,26 @@
   font-size: 14px;
   line-height: 18px;
 
-  padding: 9px 73px 11px 73px;
+  max-width: 280px;
+  margin: 0 auto;
+  margin-top: 305px;
+  padding-top: 9px;
+  padding-bottom: 11px;
   box-sizing: border-box;
-  margin-left: 20px;
-  margin-top: 290px;
 
   @media (min-width: @tablet-width) {
-    margin: 0;
     font-size: 20px;
     line-height: 20px;
-    margin-top: 28px;
+
+    max-width: 245px;
+    margin-top: 48px;
     margin-left: 90px;
     padding: 16px 29px 16px 25px;
   }
   @media (min-width: @desktop-width) {
     max-width: 245px;
-    margin-top: 32px;
-    margin-left: 80px;
+    margin-top: 52px;
+    margin-left: 120px;
   }
 }
 
