--- a/source/less/programs.less
+++ b/source/less/programs.less
@@ -31,7 +31,7 @@
   padding: 0;
   width: 280px;
   height: 265px;
-  background-color: @bg-gray;
+  background-color: #f2f2f2;
   padding: 20px;
   box-sizing: border-box;
   outline: 1px solid red;
@@ -108,7 +108,6 @@
   width: 134px;
   height: 56px;
   transform: scale(0.5);
-  fill: tomato;
 
   @media (min-width: @tablet-width) {
     transform: scale(2);
