--- a/source/less/slider.less
+++ b/source/less/slider.less
@@ -13,9 +13,6 @@
     height: 517px;
   }
 }
-.slider__toggles {
-  position: relative;
-}
 .slider__toggle {
   font-size: 16px;
   line-height: 20px;
@@ -24,14 +21,23 @@
   font-weight: bold;
   border: none;
   background-color: transparent;
+
+  @media (min-width: @tablet-width) {
+    font-weight: normal;
+    font-size: 20px;
+  }
 }
 .slider__toggle--btn1 {
   letter-spacing: -0.4px;
-  color: green;
 
   margin-left: 57px;
   margin-right: 12px;
   position: relative;
+
+  @media (min-width: @tablet-width) {
+  margin-left: 9px;
+  margin-right: 18px;
+  }
 }
 .slider__out-scale {
   display: block;
@@ -43,8 +49,19 @@
   border: 1px solid red;
   background-color: #ffffff;
   border-radius: 8px;
+
+  @media (min-width: @tablet-width) {
+    width: 428px;
+    height: 6px;
+    margin-top: 7px;
+    margin-right: 13px;
+    background-color: #dcdcdc;
+  }
 }
+
 .slider__into-scale {
+  position: relative;
+
   display: block;
   width: 35px;
   height: 6px;
@@ -52,4 +69,35 @@
   margin-left: 4px;
   border-radius: 6px;
   background-color: #000000;
+
+  @media (min-width: @tablet-width) {
+    width: 8px;
+    height: 8px;
+    margin-top: -13px;
+    margin-left: 6.5%;
+    border: 12px solid #ffffff;
+    border-radius: 50%;
+    box-shadow: 0 2px 4px 2px #cecece;
+
+    cursor: grab;
+  }
+}
+
+.slider__into-scale:hover {
+  @media (min-width: @tablet-width) {
+    box-shadow: 0 3px 4px 3px #cecece;
+  }
+}
+.slider__into-scale:hover .slider__into-scale::before {
+  @media (min-width: @tablet-width) {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 33px;
+    height: 33px;
+    border-radius: 50%;
+    border: 2px solid @bg-green;
+
+  }
 }
