--- a/source/less/example.less
+++ b/source/less/example.less
@@ -23,6 +23,9 @@
   @media (min-width: @tablet-width) {
     width: 768px;
   }
+  @media (min-width: @desktop-width) {
+    width: 1300px;
+  }
 }
 .example__title {
   margin: 0;
@@ -43,7 +46,9 @@
     box-sizing: border-box;
   }
   @media (min-width: @desktop-width) {
-    width: 100%;
+    width: 500px;
+    margin-top: 65px;
+    padding-left: 40px;
   }
 }
 
@@ -58,7 +63,7 @@
     width: 100%;
   }
   @media (min-width: @desktop-width) {
-
+    margin-top: 75px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -73,17 +78,10 @@
     margin: 0;
   }
   @media (min-width: @desktop-width) {
-    width: 450px;
+    width: 500px;
 
     outline: 1px solid blue;
-    margin-top: 75px;
-  }
-}
-
-.example__desktop-grid2 {
-  @media (min-width: @desktop-width) {
-    width: 450px;
-    outline: 1px solid blue;
+    margin-top: 0;
   }
 }
 
@@ -106,7 +104,8 @@
 
   }
   @media (min-width: @desktop-width) {
-    width: 400px;
+    width: 435px;
+    margin-left: 40px;
     margin-top: 69px;
   }
 }
@@ -135,7 +134,8 @@
     margin-left: 4%;
   }
   @media (min-width: @desktop-width) {
-    margin-top: 40px;
+    margin-top: 45px;
+    margin-left: 40px;
   }
 }
 .example__indicators p {
@@ -205,7 +205,7 @@
   text-transform: uppercase;
   display: block;
   text-align: center;
-  outline: 4px solid green;
+  outline: 1px solid green;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
@@ -217,14 +217,24 @@
     margin-right: 4%;
   }
   @media (min-width: @desktop-width) {
-    width: 100%;
+    width: 367px;
     text-align: left;
-    margin-top: 37px;
+    margin-left: 40px;
+    margitright: auto;
+    margin-top: 32px;
   }
 }
 .example__cost br {
   @media (max-width: @mobile-width-only) {
     display: none;
+  }
+  @media (min-width: @desktop-width) {
+    display: none;
+  }
+}
+.example__cost span {
+  @media (min-width: @desktop-width) {
+    margin-left: 55px;
   }
 }
 
@@ -240,7 +250,13 @@
     background-color: #f2f2f2;
     background-color: transparent;
   }
+  @media (min-width: @desktop-width) {
+    width: 690px;
+    margin: 0;
+    outline: 1px solid blue;
+  }
 }
+
 .example__images picture {
   @media (min-width: @tablet-width) {
     display: flex;
@@ -258,6 +274,10 @@
     width: 600px;
     margin: 0 auto;
     margin-top: 18px;
+  }
+  @media (min-width: @desktop-width) {
+    margin-top: 33px;
+    margin-left: 65px;
   }
 }
 
