--- a/source/less/page-footer.less
+++ b/source/less/page-footer.less
@@ -24,14 +24,17 @@
   outline: 1px solid red;
   display: flex;
   flex-wrap: wrap;
-  margin: 0 20px;
+  margin: 0 auto;
+  width: 280px;
   justify-content: space-between;
   margin-bottom: 26px;
 
   @media (min-width: @tablet-width) {
     min-height: 78px;
-    margin: 0 71px;
-    margin-bottom: 56px;
+    margin: 0 auto;
+    width: 626px;
+    margin-bottom: 40px;
+    align-self: flex-start;
   }
 }
 @media (min-width: @desktop-width) {
@@ -78,14 +81,23 @@
   @media (min-width: @tablet-width) {
     font-size: 16px;
     line-height: 20px;
-    width: 137px;
+    width: 156px;
+    text-align: right;
   }
   @media (min-width: @desktop-width) {
     width: 250px;
   }
 }
+.page-footer__address p {
+  margin: 0;
+  padding: 0;
+  @media (min-width: @tablet-width) {
+    margin-bottom: 17px;
+  }
+}
 
 .page-footer__map {
+  position: relative;
   display: block;
   outline: 1px solid black;
   margin: 0 auto;
@@ -102,14 +114,36 @@
   }
 }
 .page-footer__map-image {
+  opacity: 0.5;
+  display: block;
   @media (min-width: @tablet-width) {
     width: 767px;
     height: 400px;
+
   }
   @media (min-width: @desktop-width) {
     width: 1220px;
     height: 400px;
   }
+}
+.page-footer__map::before {
+  @media (max-width: @mobile-width-only) {
+    transform: scale(0.5);
+  }
+    content: "";
+    position: absolute;
+    top: 110px;
+    left: 100px;
+    width: 124px;
+    height: 106px;
+    background-image: url("../img/map-pin.png");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+
+    @media (min-width: @tablet-width) {
+      top: 150px;
+      left: 317px;
+    }
 }
 .page-footer__low {
   outline: 2px solid green;
@@ -147,7 +181,7 @@
   align-self: center;
 
   @media (min-width: @tablet-width) {
-    margin-top: 0;
+    margin: 0;
     margin-left: 31px;
     margin-right: 150px;
   }
@@ -173,15 +207,16 @@
 .page-footer__copyright {
   position: relative;
   min-height: 77px;
-  margin: 0 20px;
+  margin: 0 auto;
+  min-width: 280px;
   outline: 2px solid red;
 
   @media (min-width: @tablet-width) {
     min-height: 0;
+    min-width: 112px;
     margin-top: 3px;
     margin-left: 126px;
     margin-right: 78px;
-
   }
   @media (min-width: @desktop-width) {
     margin-right: 61px;
