--- a/source/less/slider.less
+++ b/source/less/slider.less
@@ -34,6 +34,7 @@
     padding-bottom: 5px;
     border-bottom: 1px dotted #bebebe;
   }
+
 }
 .slider__toggle--btn1 {
   letter-spacing: -0.4px;
@@ -50,7 +51,7 @@
 .slider__out-scale {
   position: relative;
 
-  display: block;
+  display: flex;
   width: 84px;
   height: 13px;
   margin-top: 3px;
@@ -80,7 +81,7 @@
   background-color: #000000;
 
   @media (min-width: @tablet-width) {
-    display: inline-block;
+    display: flex;
     width: 8px;
     height: 8px;
     margin-top: -13px;
