--- a/source/less/product-show.less
+++ b/source/less/product-show.less
@@ -1,7 +1,7 @@
 .product-show {
   min-height: 208px;
   outline: 1px solid red;
-  padding: 80px 0 25px 0;
+  padding: 58px 0 25px 0;
   box-sizing: border-box;
   position: relative;
 }
@@ -25,7 +25,7 @@
   width: 30px;
   height: 30px;
   top: 26px;
-  left: 125px;
+  left: 145px;
   opacity: 0.4;
 
   @media (min-width: @tablet-width) {
@@ -54,6 +54,7 @@
   text-transform: uppercase;
   font-size: 16px;
   line-height: 20px;
+  margin-top: 0;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
@@ -91,9 +92,4 @@
     margin-left: auto;
     margin-right: auto;
   }
-}
-
-.product__link {
-  width: 168px;
-  height: 41px;
 }
