надо будет проверить на переполнение и макросетки

--- a/source/less/button.less
+++ b/source/less/button.less
@@ -8,6 +8,7 @@
   color: #ffffff;
 
   background-color: @bg-green;
+  background-color: transparent;
   border: none;
   text-decoration: none;
 
@@ -26,6 +27,7 @@
 
 .button--gray {
   background-color: #f2f2f2;
+  background-color: transparent;
   color: #000000;
 }
 
