--- a/source/less/additional.less
+++ b/source/less/additional.less
@@ -1,5 +1,8 @@
 .additional {
+  position: relative;
+
   min-height: 967px;
+  width: 100%;
   outline: 1px solid red;
 
   @media (min-width: @tablet-width) {
@@ -16,11 +19,13 @@
   }
 }
 .additional h2 {
+  display: inline-block;
   margin: 0;
   padding: 0;
   margin-top: 28px;
   margin-bottom: 33px;
-  margin-left: 19px;
+  padding-left: 19px;
+  padding-right: 22px;
 
   font-size: 24px;
   line-height: 24px;
@@ -43,6 +48,16 @@
     margin-left: 0;
     width: 100%;
   }
+}
+.additional::before {
+  position: absolute;
+  content: "";
+  top: 43px;
+  z-index: -10;
+
+  width: 100%;
+  height: 3px;
+  background-color: @bg-green;
 }
 .additional__list {
   list-style: none;
