--- a/source/less/main-catalog.less
+++ b/source/less/main-catalog.less
@@ -1,18 +1,10 @@
 .main-catalog {
-  width: 320px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
   outline: 1px solid black;
   padding: 17px 0 0 0;
-
-  @media (min-width: @tablet-width) {
-    width: 710px;
-  }
-
-  @media (min-width: @desktop-width) {
-    width: 1220px;
-  }
 }
 .main-catalog h1 {
   margin: 0;
