--- a/source/less/product-add.less
+++ b/source/less/product-add.less
@@ -54,7 +54,7 @@
   line-height: 14px;
   font-family: "Arial";
   outline: 1px solid red;
-  margin-bottom: 12px;
+  margin-bottom: 16px;
   vertical-align: middle;
   display: flex;
   justify-content: space-between;
@@ -62,17 +62,29 @@
   @media (min-width: @tablet-width) {
     font-size: 16px;
     line-height: 20px;
-    margin-bottom: 17px;
+    margin-bottom: 21px;
+  }
+}
+.product-add__list li:nth-child(2) {
+  @media (min-width: @tablet-width) {
+    min-width: 45px;
+    outline: 1px solid green;
+    text-align: right;
+    margin-left: 52px;
   }
 }
 .product-add__link {
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  font-weight: normal;
+
   @media (min-width: @tablet-width) {
     width: 100%;
     font-size: 16px;
     line-height: 20px;
-    font-weight: bold;
+    font-weight: normal;
+    padding-top: 11px;
+    padding-bottom: 8px;
   }
   @media (min-width: @desktop-width) {
     width: 245px;
