--- a/source/less/product-show.less
+++ b/source/less/product-show.less
@@ -60,7 +60,7 @@
     font-size: 20px;
     line-height: 20px;
     width: 170px;
-    margin-top: 83px;
+    margin-top: 106px;
     margin-left: 74px;
   }
 
@@ -82,14 +82,18 @@
   @media (min-width: @tablet-width) {
     font-size: 16px;
     line-height: 16px;
-    width: 140px;
-    margin-top: 26px;
+    width: 170px;
+    margin-top: 27px;
     margin-left: 74px;
-    outline: 1px solid red;
-    margin-bottom: 90px;
+    margin-bottom: 89px;
   }
   @media (min-width: @desktop-width) {
     margin-left: auto;
     margin-right: auto;
   }
+}
+
+.product__link {
+  font-size: 16px;
+  line-height: 16px;
 }
