--- a/source/less/product.less
+++ b/source/less/product.less
@@ -148,7 +148,7 @@
   @media (min-width: @tablet-width) {
     margin-top: 20px;
     margin-right: 35px;
-    margin-bottom: 30px;
+    margin-bottom: 33px;
     margin-left: 37px;
     font-size: 16px;
     font-family: 16px;
@@ -169,10 +169,14 @@
 .product__link {
   display: block;
   margin: 0 auto;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 12px;
+  padding-bottom: 11px;
   box-sizing: border-box;
   width: 280px;
+
+  @media (min-width: @tablet-width) {
+    width: 245px;
+  }
   @media (min-width: @desktop-width) {
     width: 168px;
     height: 41px;
