--- a/source/less/social.less
+++ b/source/less/social.less
@@ -14,7 +14,9 @@
     outline: 1px solid red;
     width: 140px;
     height: 28px;
-    margin-top: -2px;
+  }
+  @media (min-width: @desktop-width) {
+    margin-top: 2px;
   }
 }
 .social__icon-vk {
