--- a/source/less/additional.less
+++ b/source/less/additional.less
@@ -14,8 +14,21 @@
     flex-wrap: wrap;
     align-items: flex-start;
     align-content: flex-start;
-    justify-content: space-between;
+    justify-content: center;
     min-height: 565px;
+  }
+}
+.additional__title-wrapper {
+  width: 320px;
+  margin: 0 auto;
+  outline: 1px solid red;
+
+  @media (min-width: @tablet-width) {
+    width: 710px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1300px;
   }
 }
 .additional h2 {
@@ -23,7 +36,7 @@
   margin: 0;
   padding: 0;
   margin-top: 28px;
-  margin-bottom: 33px;
+  margin-bottom: 35px;
   padding-left: 19px;
   padding-right: 22px;
 
@@ -34,19 +47,18 @@
 
   @media (min-width: @tablet-width) {
     margin: 0;
-    padding: 0;
+    padding-left: 37px;
+    padding-right: 37px;
 
     font-size: 36px;
     line-height: 36px;
     margin-top: 68px;
-    margin-left: 37px;
     margin-bottom: 80px;
   }
 
   @media (min-width: @desktop-width) {
     margin-top: 76px;
     margin-left: 0;
-    width: 100%;
   }
 }
 .additional::before {
@@ -58,6 +70,14 @@
   width: 100%;
   height: 3px;
   background-color: @bg-green;
+
+  @media (min-width: @tablet-width) {
+    top: 90px;
+  }
+
+  @media (min-width: @desktop-width) {
+    top: 97px;
+  }
 }
 .additional__list {
   list-style: none;
@@ -65,16 +85,24 @@
   padding: 0;
   display: flex;
   flex-direction: column;
-  margin: 0 20px;
+  width: 320px;
+  margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
+  box-sizing: border-box;
+  outline: 1px solid green;
 
   @media (min-width: @tablet-width) {
-    margin: 0;
+    width: 710px;
+    padding: 0;
   }
 
   @media (min-width: @desktop-width) {
     width: 895px;
     height: 288px;
     margin: 0;
+    margin-right: 80px;
+
   }
 }
 .additional__gift {
@@ -90,6 +118,7 @@
   margin-top: 40px;
   outline: 1px solid red;
   display: flex;
+  opacity: 0.5;
 
   @media (max-width: @mobile-width-only) and (min-resolution: @retina-dppx) {
     background-image: url("../img/gift-photo-mobile@2x.jpg");
