--- a/source/less/main-catalog.less
+++ b/source/less/main-catalog.less
@@ -9,21 +9,27 @@
 .main-catalog h1 {
   margin: 0;
   padding: 0;
-  margin-left: 20px;
+  margin: 0 auto;
+  width: 320px;
   font-weight: 400;
   font-size: 36px;
   line-height: 60px;
   color: green;
   margin-bottom: 27px;
+  padding-left: 20px;
+  box-sizing: border-box;
+  outline: 1px solid green;
 
   @media (min-width: @tablet-width) {
     margin-top: 13px;
-    margin-left: 0;
+    width: 710px;
+    padding-left: 0;
     font-size: 60px;
     line-height: 60px;
   }
 
   @media (min-width: @desktop-width) {
+    width: 1220px;
     margin-top: 46px;
   }
 }
@@ -31,14 +37,18 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  margin: 0 auto;
 
   outline: 1px solid blue;
 
   @media (min-width: @tablet-width) {
-    margin: 0;
     margin-top: 139px;
+    width: 710px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+  }
+  @media (min-width: @desktop-width) {
+    width: 1220px;
   }
 }
