--- a/source/less/form-programs.less
+++ b/source/less/form-programs.less
@@ -1,6 +1,11 @@
 .form-programs {
   border: none;
   width: 320px;
+  display: flex;
+  flex-direction: column;
+  border-top: 1px solid #ededed;
+  border-bottom: 1px solid #ededed;
+  min-height: 157px;
 
   margin: 0 auto;
   height: 157px;
@@ -17,21 +22,14 @@
     margin-right: 0;
   }
 }
-.form-programs__wrapper {
-  display: flex;
-  flex-direction: column;
-  border-top: 1px solid #ededed;
-  border-bottom: 1px solid #ededed;
-  min-height: 157px
-}
 .form-programs__label {
   font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
 
-  margin-top: 22px;
-  margin-bottom: 3px;
-  margin-left: 54px;
+  margin-top: 23px;
+  margin-bottom: 2px;
+  margin-left: 68px;
   position: relative;
 
   @media (min-width: @tablet-width) {
