--- a/source/less/comment.less
+++ b/source/less/comment.less
@@ -8,23 +8,31 @@
   @media (min-width: @tablet-width) {
     min-height: 330px;
   }
+
   @media (min-width: @desktop-width) {
     padding: 0;
     min-height: 350px;
   }
 }
-.comment__legend {
+.comment__title-container {
+  outline: 1px solid red;
+  width: 320px;
+  margin: 0 auto;
+}
+.comment__title {
   font-size: 24px;
   line-height: 24px;
   max-width: 162px;
+  font-weight: normal;
   padding-right: 21px;
-  padding-left: 17px;
+  padding-left: 19px;
   box-sizing: border-box;
   background-color: #ffffff;
+  background-color: transparent;
 
   outline: 1px solid red;
-  margin-top: 15px;
-  margin-left: 0px;
+  margin-top: 12px;
+  margin-left: 0;
 
   @media (min-width: @tablet-width) {
     font-size: 36px;
@@ -45,7 +53,7 @@
 .comment::before {
   content: "";
   position: absolute;
-  top: 28px;
+  top: 25px;
   left: 0;
   width: 100%;
   height: 3px;
@@ -59,11 +67,16 @@
     top: 88px;
   }
 }
+.additionally__title-container {
+  width: 320px;
+  margin: 0 auto;
+}
 .comment__container {
-  width: 275px;
-  height: 147px;
+  width: 278px;
+  height: 150px;
   margin: 0 auto;
   margin-top: 33px;
+  background-color: transparent;
 
   @media (min-width: @tablet-width) {
     width: 630px;
