--- a/source/less/owner.less
+++ b/source/less/owner.less
@@ -13,18 +13,28 @@
     padding: 0;
   }
 }
-.owner__legend {
+.owner__title-container {
+  width: 320px;
+  margin: 0 auto;
+  outline: 1px solid green;
+
+  @media (min-width: @tablet-width) {
+    width: 768px;
+
+  }
+}
+.owner__title {
+  font-weight: normal;
   font-size: 24px;
   line-height: 24px;
-  max-width: 221px;
-  padding-right: 21px;
-  padding-left: 18px;
-  box-sizing: border-box;
+  max-width: 220px;
   background-color: #ffffff;
+  background-color: transparent;
+  outline: 1px solid black;
 
-  outline: 1px solid red;
-  margin-top: 30px;
-  margin-left: 0px;
+  margin-top: 29px;
+  padding-left: 19px;
+  box-sizing: border-box;
 
 
   @media (min-width: @tablet-width) {
@@ -47,7 +57,7 @@
 .owner::before {
   content: "";
   position: absolute;
-  top: 43px;
+  top: 39px;
   left: 0;
   width: 100%;
   height: 3px;
@@ -65,9 +75,9 @@
 .owner__container {
   margin: 0;
   padding: 0;
-  width: 280px;
+  width: 282px;
   min-height: 102px;
-  outline: 3px solid red;
+  outline: 1px solid red;
   margin: 0 auto;
   margin-top: 33px;
 
@@ -91,7 +101,7 @@
   font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
-  margin-top: 10px;
+  margin-top: 5px;
   margin-right: 10px;
   outline: 1px solid tomato;
   position: relative;
@@ -108,16 +118,44 @@
     align-self: flex-start;
   }
 }
+.owner__input-wrapper {
+  display: flex;
+  justify-content: space-between;
+  min-width: 100px;
+  flex-grow: 1;
+  height: 45px;
+  outline: 1px solid blue;
+  margin-bottom: 14px;
+}
+.owner__input-wrapper p {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  width: 45px;
+  height: 100%;
+  outline: 1px solid green;
+  background-color: transparent;
+}
+.owner__email-icon {
+  margin-top: 14px;
+  margin-left: 10px;
+
+}
+.owner__phone-icon {
+  margin-top: 11px;
+  margin-left: 10px;
+
+}
 .owner__container input {
   font-size: 16px;
   line-height: 18px;
   font-family: "Oswald";
   text-transform: uppercase;
   height: 41px;
-  border: 1px solid red;
-  margin-bottom: 14px;
+  border: 1px solid green;
   flex-grow: 1;
   padding-left: 15px;
+  background-color: transparent;
 
   @media (min-width: @tablet-width) {
     min-width: 440px;
@@ -141,38 +179,3 @@
   }
 }
 
-.owner__email-icon {
-  position: absolute;
-  top: 5px;
-  left: 248px;
-  width: 17px;
-  height: 13px;
-  fill: green;
-
-  @media (min-width: @tablet-width) {
-    top: 8px;
-    left: 594px;
-  }
-  @media (min-width: @desktop-width) {
-    top: 12px;
-    left: 526px;
-  }
-}
-
-.owner__phone-icon {
-  position: absolute;
-  top: 3px;
-  left: 248px;
-  width: 20px;
-  height: 20px;
-  fill: blue;
-
-  @media (min-width: @tablet-width) {
-    top: 9px;
-    left: 594px;
-  }
-  @media (min-width: @desktop-width) {
-    top: 10px;
-    left: 537px;
-  }
-}
