--- a/source/less/owner.less
+++ b/source/less/owner.less
@@ -112,6 +112,7 @@
     line-height: 20px;
     margin-right: 18px;
     margin-left: 3px;
+    margin-top: 10px;
   }
   @media (min-width: @desktop-width) {
     margin-right: 20px;
@@ -126,6 +127,11 @@
   height: 45px;
   outline: 1px solid blue;
   margin-bottom: 14px;
+
+  @media (min-width: @tablet-width) {
+    height: 49px;
+    margin-bottom: 25px;
+  }
 }
 .owner__input-wrapper p {
   position: relative;
@@ -140,11 +146,20 @@
   margin-top: 14px;
   margin-left: 10px;
 
+  @media (min-width: @tablet-width) {
+    margin-top: 20px;
+    margin-left: 9px;
+  }
+
 }
 .owner__phone-icon {
   margin-top: 11px;
   margin-left: 10px;
 
+  @media (min-width: @tablet-width) {
+    margin-top: 15px;
+    margin-left: 9px;
+  }
 }
 .owner__container input {
   font-size: 16px;
@@ -158,11 +173,10 @@
   background-color: transparent;
 
   @media (min-width: @tablet-width) {
-    min-width: 440px;
-    height: 49px;
+    height: 45px;
     margin-bottom: 21px;
     padding-left: 20px;
-    font-size: 20px;
+    font-size: 25px;
     line-height: 20px;
   }
   @media (min-width: @desktop-width) {
