--- a/source/less/additionally.less
+++ b/source/less/additionally.less
@@ -10,7 +10,7 @@
     min-height: 440px;
   }
   @media (min-width: @desktop-width) {
-    min-height: 393px;
+    min-height: 375px;
     padding: 0;
   }
 }
@@ -26,6 +26,14 @@
   margin: 0 auto;
   outline: 1px solid red;
   margin-top: 27px;
+
+  @media (min-width: @tablet-width) {
+    width: 768px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1300px;
+  }
 }
 .additionally__title {
   font-size: 24px;
@@ -49,14 +57,13 @@
     max-width: 291px;
     padding-right: 41px;
     padding-left: 41px;
-    margin-top: 63px;
-    margin-left: 27px;
+    margin-top: 61px;
+    margin-left: 29px;
   }
   @media (min-width: @desktop-width) {
-    padding-left: 0px;
-    margin-top: 64px;
-    margin-left: -3px;
-    max-width: 254px;
+    margin-top: 49px;
+    padding-left: 39px;
+    margin-left: 0;
   }
 }
 .additionally::before {
@@ -70,7 +77,10 @@
   z-index: -5;
 
   @media (min-width: @tablet-width) {
-    top: 85px;
+    top: 83px;
+  }
+  @media (min-width: @desktop-width) {
+    top: 70px;
   }
 }
 
@@ -190,18 +200,19 @@
 
 
   @media (min-width: @tablet-width) {
-    margin-left: 38px;
+    margin-left: 36px;
     width: 283px;
     height: 52px;
     font-size: 20px;
     line-height: 20px;
+    margin-top: 22px;
     margin-right: 61px;
   }
   @media (min-width: @desktop-width) {
-    margin-left: 0px;
+    margin-left: 2px;
     width: 568px;
-    margin-top: 28px;
-    margin-right: 80px;
+    margin-top: 29px;
+    margin-right: 81px;
   }
 }
 .additionally small {
