--- a/source/less/comment.less
+++ b/source/less/comment.less
@@ -22,6 +22,10 @@
   @media (min-width: @tablet-width) {
     width: 768px
   }
+
+  @media (min-width: @desktop-width) {
+    width: 1300px;
+  }
 }
 .comment__title {
   font-size: 24px;
@@ -43,15 +47,13 @@
     line-height: 36px;
     max-width: 260px;
     padding-right: 41px;
-    padding-left: 43px;
-    margin-top: 65px;
-    margin-left: 27px;
+    padding-left: 39px;
+    margin-top: 39px;
+    margin-left: 30px;
   }
   @media (min-width: @desktop-width) {
-    padding-left: 0px;
-    margin-top: 66px;
-    margin-left: -2px;
-    max-width: 218px;
+    margin-top: 44px;
+    margin-left: 0;
   }
 }
 .comment::before {
@@ -65,10 +67,10 @@
   z-index: -5;
 
   @media (min-width: @tablet-width) {
-    top: 88px;
+    top: 61px;
   }
   @media (min-width: @desktop-width) {
-    top: 88px;
+    top: 66px;
   }
 }
 
