--- a/source/less/social.less
+++ b/source/less/social.less
@@ -42,6 +42,7 @@
 
   width: 16px;
   height: 16px;
+  fill: #000000;
 
   @media (min-width: @tablet-width) {
     transform: scale(1.45);
@@ -69,5 +70,12 @@
 }
 .social__link:focus,
 .social__link:active {
+  opacity: 0.5;
+}
+.social__icon-insta:hover {
+  fill: @bg-green;
+}
+.social__icon-insta:focus,
+.social__icon-insta:active {
   opacity: 0.5;
 }
