разбираемся со стайлгайд слайд

--- a/source/less/cat.less
+++ b/source/less/cat.less
@@ -65,6 +65,9 @@
 .cat input:focus {
   border: 2px solid #444444;
 }
+.cat .cat__input--error {
+  border: 2px solid #ff8282;
+}
 .cat label {
   font-size: 16px;
   line-height: 18px;
