есть баги в инст и слайд

--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -106,9 +106,10 @@
   .main-nav__item .main-nav__link--index {
     color: #ffffff;
   }
-  .main-nav__item .main-nav__link--active--index {
+  .main-nav__item .main-nav__link--main-act {
     border-bottom: 2px solid #ffffff;
     padding-bottom: 7px;
+    color: #ffffff;
   }
 }
 
