--- a/source/less/description.less
+++ b/source/less/description.less
@@ -28,17 +28,11 @@
     position: relative;
   }
 }
-
 .description__feedstuff {
-  content: "";
-  position: absolute;
-  top: 168px;
-  left: 20px;
-
   width: 280px;
   height: 271px;
+  margin-left: 20px;
 
-  z-index: 10;
   outline: 1px solid red;
 
   @media (max-width: @mobile-width-only) and (min-resolution: @retina-dppx) {
@@ -46,6 +40,8 @@
   }
 
   @media (min-width: @tablet-width) {
+    margin: 0;
+    position: absolute;
     top: 232px;
     left: 0;
     width: 709px;
@@ -127,6 +123,7 @@
   text-align: center;
   text-transform: uppercase;
   margin-top: 24px;
+  margin-bottom: 30px;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
@@ -149,7 +146,7 @@
 
   max-width: 280px;
   margin: 0 auto;
-  margin-top: 305px;
+  margin-top: 0;
   padding-top: 9px;
   padding-bottom: 11px;
   box-sizing: border-box;
