--- a/source/less/programs.less
+++ b/source/less/programs.less
@@ -30,7 +30,7 @@
   margin: 0;
   padding: 0;
   width: 280px;
-  height: 265px;
+  min-height: 265px;
   background-color: #f2f2f2;
   padding: 20px;
   box-sizing: border-box;
@@ -39,12 +39,12 @@
 
   @media (min-width: @tablet-width) {
     width: 708px;
-    height: 370px;
+    min-height: 370px;
     padding: 75px 52px 62px 52px;
   }
   @media (min-width: @desktop-width) {
     width: 570px;
-    height: 370px;
+    min-height: 370px;
   }
 }
 .programs__item:first-child {
@@ -135,6 +135,7 @@
     line-height: 37px;
     margin-top: 0px;
     margin-left: 0px;
+    max-width: 340px;
   }
   @media (min-width: @desktop-width) {
     margin-left: 163px;
@@ -179,6 +180,10 @@
   top: 112px;
   left: 0;
   background-color: #d9d9d9;
+
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
 }
 .programs__link {
   font-size: 16px;
@@ -186,25 +191,26 @@
   text-transform: uppercase;
   color: #000000;
   outline: 1px solid red;
-  display: block;
-  margin-top: 43px;
+  display: inline-block;
+  vertical-align: top;
+  margin-top: 30px;
   position: relative;
 
   @media (min-width: @tablet-width) {
-    margin-top: 58px;
+    margin-top: 40px;
     font-size: 20px;
     line-height: 20px;
   }
   @media (min-width: @desktop-width) {
-    margin-top: 33px;
+    margin-top: 16px;
   }
 }
 .programs__link-right {
   width: 25px;
   height: 11px;
   position: absolute;
-  top: 4px;
-  left: 96px;
+  top: 3px;
+  right: -36px;
 
   @media (min-width: @tablet-width) {
     top: 6px;
@@ -219,8 +225,8 @@
   width: 32px;
   height: 11px;
   position: absolute;
-  top: 4px;
-  left: 96px;
+  top: 3px;
+  right: -46px;
 
   @media (min-width: @tablet-width) {
     top: 6px;
