сделали переполнение индекса

--- a/source/less/example.less
+++ b/source/less/example.less
@@ -154,13 +154,13 @@
   color: green;
   box-sizing: border-box;
   width: 124px;
-  height: 54px;
+  min-height: 54px;
   border: 1px solid #cfcfcf;
   border-radius: 3px;
 
   @media (min-width: @tablet-width) {
     width: 162px;
-    height: 72px;
+    min-height: 72px;
     font-size: 30px;
     line-height: 37px;
   }
@@ -265,7 +265,6 @@
 }
 .example__toggles {
   display: flex;
-
   margin-top: 25px;
   margin-bottom: 30px;
 
