--- a/source/less/slider.less
+++ b/source/less/slider.less
@@ -24,14 +24,18 @@
   font-weight: bold;
   border: none;
   background-color: transparent;
+  padding-right: 0;
+  padding-left: 0;
 
   cursor: pointer;
+  max-width: 45px;
 
   @media (min-width: @tablet-width) {
     font-weight: normal;
     font-size: 20px;
-    padding-right: 0;
-    padding-left: 0;
+    max-width: 55px;
+
+
     padding-bottom: 5px;
     border-bottom: 1px dotted #bebebe;
   }
@@ -47,8 +51,8 @@
 .slider__toggle--btn1 {
   letter-spacing: -0.4px;
 
-  margin-left: 57px;
-  margin-right: 12px;
+  margin-left: 63px;
+  margin-right: 16px;
   position: relative;
 
   @media (min-width: @tablet-width) {
@@ -63,7 +67,7 @@
   width: 84px;
   height: 13px;
   margin-top: 3px;
-  margin-right: 10px;
+  margin-right: 17px;
   border: 1px solid #cdcdcd;
   border: 1px solid red;
   background-color: #ffffff;
