--- a/source/less/how-work.less
+++ b/source/less/how-work.less
@@ -61,7 +61,7 @@
 
   @media (min-width: @tablet-width) {
     width: 245px;
-    height: 228px;
+    min-height: 228px;
     outline: 1px solid red;
     font-size: 16px;
     line-height: 24px;
