--- a/source/less/social.less
+++ b/source/less/social.less
@@ -7,13 +7,13 @@
   border-bottom: 1px solid #d9d9d9;
   position: relative;
   width: 280px;
-  height: 64px;
+  min-height: 64px;
 
   @media (min-width: @tablet-width) {
     border: none;
     outline: 1px solid red;
     width: 140px;
-    height: 28px;
+    min-height: 28px;
   }
   @media (min-width: @desktop-width) {
     margin-top: 2px;
