--- a/source/less/product-show.less
+++ b/source/less/product-show.less
@@ -1,4 +1,5 @@
 .product-show {
+  width: 320px;
   min-height: 208px;
   outline: 1px solid red;
   padding: 58px 0 25px 0;
@@ -9,7 +10,7 @@
 @media (min-width: @tablet-width) {
   .product-show {
     width: 323px;
-    height: 429px;
+    min-height: 429px;
     outline: 1px solid black;
   }
 }
@@ -17,7 +18,7 @@
 @media (min-width: @desktop-width) {
   .product-show {
     width: 243px;
-    height: 430px;
+    min-height: 430px;
   }
 }
 .product-show__icon-plus-mobile {
